# grafickeRozhranie

./: CMakeLists.txt  chat.c  chat.glade  client.c  commonPointers.c  login.c  login.glade  main.c  mainSearch.glade  makefile
grafickeRozhranie/: #mainSearch.glade#  chat.c  chat.glade  commonPointers.c  login.c  login.glade
